--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -127,8 +127,8 @@
     "badge": {
       "title": "Шифрование AES-256",
       "rows": {
-        "personalData": { "label": "Персональные данные", "value": "Зашифрованы" },
-        "answers": { "label": "Ответы на вопросы", "value": "Локально" },
+        "personalData": { "label": "Персональные данные", "value": "Не собираются" },
+        "answers": { "label": "Ответы на вопросы", "value": "Шифруются" },
         "session": { "label": "История сессий", "value": "Анонимно" },
         "security": { "label": "Уровень безопасности", "value": "Банковский" }
       }
@@ -147,7 +147,8 @@
     "startNow": "Начни сейчас",
     "startNowDescription": "Готов позаботиться о своём психическом здоровье? Начни свой путь сейчас.",
     "startButton": "Начать в Telegram",
-    "copyright": "© Menhausen {year}. Все права защищены."
+    "copyright": "© Menhausen {year}. Все права защищены.",
+    "allRightsReserved": "Все права защищены."
   },
   "language": {
     "en": "English",
@@ -179,8 +180,7 @@
       "title": "Информация, которую мы собираем",
       "content": "Мы собираем минимальную информацию для предоставления и улучшения наших услуг:",
       "websiteData": "Данные об использовании веб-сайта (посещенные страницы, время, проведенное на сайте, информация об устройстве)",
-      "appData": "Анонимные данные об использовании приложения (без личных идентификаторов)",
-      "analyticsData": "Агрегированные аналитические данные через Google Analytics"
+      "appData": "Анонимные данные об использовании приложения (без личных идентификаторов)"
     },
     "dataUsage": {
       "title": "Как мы используем твою информацию",
@@ -192,7 +192,6 @@
     "dataSharing": {
       "title": "Обмен информацией",
       "content": "Мы не продаем и не передаем твою личную информацию, за исключением:",
-      "googleAnalytics": "С Google Analytics для веб-аналитики (только анонимизированные данные)",
       "legal": "Когда требуется по закону или судебному процессу",
       "business": "В случае передачи бизнеса или слияния"
     },
